[package]
name = "hd44780-test"
version = "0.1.0"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1.0.0"
esp-backtrace = { version = "0.14.1", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = [ "esp32c3", "embedded-hal-02", "embedded-hal" ] }
esp-println = { version = "0.11.0", features = ["esp32c3", "log"] }
hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver.git" }
adv-shift-registers = "0.2.1"
#adv-shift-registers = { path = "../adv-shift-registers" }
log = { version = "0.4.22" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
